--- a/app/views/layouts/layout.haml
+++ b/app/views/layouts/layout.haml
@@ -1,8 +1,7 @@
 !!!
 %html
 	%head
-		%title
-			=render_partial :title
+		%title Starcraft II Overwatch
 		%meta(http-equiv="Content-Type" content="text/html; charset=iso-8859-1")
 		%meta(name="description" content="Specializing in mass-market, previously enjoyed books; general fiction, romance, science fiction/fantasy, mystery, general interest non-fiction.")
 		%meta(name="keywords" content="used book store, used books, secondhand books, scence fiction, fantasy, children books, Riverview bookstore, Moncton Bookstore,K-Cups Riverview, K-cups moncton, k-cups coffee moncton")
@@ -14,12 +13,9 @@
 	%body(style="background: #13473a")
 		#body-container
 			#wrap
-				.container.border-shadow
+				.container-fluid.border-shadow
 					#header
-						.row
-							.col-xs-12
-								%img.header-image(src="/img/webpagelogo1.jpg")
-
+						=render_partial :navbar
 					#body
 						.row
 							=yield
