added help to submit

--- a/app/views/pages/submit.haml
+++ b/app/views/pages/submit.haml
@@ -4,6 +4,7 @@
 
 	%form(method="post" enctype="multipart/form-data")
 		.form-group
+			.help-block Name includes clan tag.
 			%label Name
 			%input.form-control(name="name")
 		.form-group
