Added game list to search

--- a/app/views/pages/search.haml
+++ b/app/views/pages/search.haml
@@ -20,7 +20,8 @@
 						-if player.server == "KR"
 							%img(src="/img/kr.png")
 						#{player.server}
-					%td #{player.name}
+					%td
+						%a(href="/search/#{player.id}/games") #{player.name}
 					%td
 						-if player.race == "Zerg"
 							%img(src="/img/ico_race_z.png")
