Fixed table position and border. Removed javascript

--- a/app/views/layouts/layout.haml
+++ b/app/views/layouts/layout.haml
@@ -5,8 +5,8 @@
 		%meta(http-equiv="Content-Type" content="text/html; charset=iso-8859-1")
 		%meta(name="description" content="Specializing in mass-market, previously enjoyed books; general fiction, romance, science fiction/fantasy, mystery, general interest non-fiction.")
 		%meta(name="keywords" content="used book store, used books, secondhand books, scence fiction, fantasy, children books, Riverview bookstore, Moncton Bookstore,K-Cups Riverview, K-cups moncton, k-cups coffee moncton")
-		=script('jquery.min.js')
-		=script('bootstrap.min.js')
+		//=script('jquery.min.js')
+		/=script('bootstrap.min.js')
 		=css('style.css')
 		=css('bootstrap.min.css')
 
