--- a/app/views/pages/search.haml
+++ b/app/views/pages/search.haml
@@ -1,5 +1,5 @@
-.col-xs-12.nudge_down
-	%table.table.table-hover.table-striped.table.bordered
+.col-xs-12.nudge-down
+	%table.table.table-hover.table-striped.table-bordered
 		%thead
 			%tr
 				%td Server
