changed SEA to SG

--- a/app/views/pages/list.haml
+++ b/app/views/pages/list.haml
@@ -26,7 +26,7 @@
 							%img(src="/img/eu.png")
 						-if g.player.server == "NA"
 							%img(src="/img/us.png")
-						-if g.player.server == "SEA"
+						-if g.player.server == "SG"
 							%img(src="/img/au.png")
 						-if g.player.server == "CN"
 							%img(src="/img/cn.png")
