changed SEA to SG

--- a/app/views/pages/search.haml
+++ b/app/views/pages/search.haml
@@ -13,7 +13,7 @@
 							%img(src="/img/eu.png")
 						-if player.server == "NA"
 							%img(src="/img/us.png")
-						-if player.server == "SEA"
+						-if player.server == "SG"
 							%img(src="/img/au.png")
 						-if player.server == "CN"
 							%img(src="/img/cn.png")
