added evidence model

--- a/app/views/pages/game.haml
+++ b/app/views/pages/game.haml
@@ -29,3 +29,9 @@
 				%button.btn.btn-danger.form-control(href="/game/#{@game.id}/guilty" readonly) Guilty
 			-else
 				%a.btn.btn-danger.form-control(href="/game/#{@game.id}/guilty") Guilty
+
+.col-xs-4
+	%form
+		.form-group
+			%label Evidence
+			%textarea
