changed NA to US to account for blizzard naming

--- a/app/views/pages/list.haml
+++ b/app/views/pages/list.haml
@@ -24,7 +24,7 @@
 					%td
 						-if g.player.server == "EU"
 							%img(src="/img/eu.png")
-						-if g.player.server == "NA"
+						-if g.player.server == "US"
 							%img(src="/img/us.png")
 						-if g.player.server == "SG"
 							%img(src="/img/au.png")
