--- a/app/views/pages/search.haml
+++ b/app/views/pages/search.haml
@@ -11,7 +11,7 @@
 					%td
 						-if player.server == "EU"
 							%img(src="/img/eu.png")
-						-if player.server == "NA"
+						-if player.server == "US"
 							%img(src="/img/us.png")
 						-if player.server == "SG"
 							%img(src="/img/au.png")
