added evidence field. Added new fields to game model

--- a/app/views/pages/submit.haml
+++ b/app/views/pages/submit.haml
@@ -9,5 +9,8 @@
 			%label Name
 			%input.form-control(name="name")
 		.form-group
+			%label Evidence
+			%textarea.form-control(name="evidence")
+		.form-group
 			%input(type="file" name="replay")
 			%button.btn.btn-default.form-control(type="submit") Submit
