--- a/app/views/pages/submit.haml
+++ b/app/views/pages/submit.haml
@@ -3,6 +3,8 @@
 .col-xs-4.nudge-down
 	-if request.url.include? "player_not_found"
 		.alert.alert-danger Player not found in replay.
+	-if request.url.include? "no_evidence"
+		.alert.alert-danger No evidence provided.
 	%form(method="post" enctype="multipart/form-data")
 		.form-group
 			.help-block Name includes clan tag.
