--- a/app/views/pages/game.haml
+++ b/app/views/pages/game.haml
@@ -24,18 +24,18 @@
 				#{@game.evidence}
 	%label Vote
 	.form-group
-		%select.form-control
-			%option(disabled selected) Who won this game?
+		%select.form-control(name="winner_confirm")
+			%option(disabled="" selected) Who won this game?
 			-@game.players.each do |p|
 				%option #{p.name}
 	.row
 		.col-xs-6
-			-if cookies["#{@game.id}vote"]
+			-if @can_vote
 				%button.btn.btn-success.form-control(href="/game/#{@game.id}/innocent" disabled) Innocent
 			-else
 				%a.btn.btn-success.form-control(href="/game/#{@game.id}/innocent") Innocent
 		.col-xs-6
-			-if cookies["#{@game.id}vote"]
+			-if @can_vote
 				%button.btn.btn-danger.form-control(href="/game/#{@game.id}/guilty" disabled) Guilty
 			-else
 				%a.btn.btn-danger.form-control(href="/game/#{@game.id}/guilty") Guilty
