cleared database. Added info

--- a/app/views/pages/list.haml
+++ b/app/views/pages/list.haml
@@ -1,4 +1,6 @@
 .col-xs-5.nudge-down
+	.alert.alert-info
+		Database reset to implement new features.
 	%p.help-block
 		Simple app to catch hackers in Starcraft II
 	%p.help-block
