Removed wrong info in layout

--- a/app/views/layouts/layout.haml
+++ b/app/views/layouts/layout.haml
@@ -3,8 +3,8 @@
 	%head
 		%title Starcraft II Overwatch
 		%meta(http-equiv="Content-Type" content="text/html; charset=iso-8859-1")
-		%meta(name="description" content="Specializing in mass-market, previously enjoyed books; general fiction, romance, science fiction/fantasy, mystery, general interest non-fiction.")
-		%meta(name="keywords" content="used book store, used books, secondhand books, scence fiction, fantasy, children books, Riverview bookstore, Moncton Bookstore,K-Cups Riverview, K-cups moncton, k-cups coffee moncton")
+		%meta(name="description" content="Hacker database for SC2.")
+		%meta(name="keywords" content="starcraft heart of the swarm hacker database imbaqq")
 		//=script('jquery.min.js')
 		/=script('bootstrap.min.js')
 		=css('style.css')
