added bootstrap js for dropdown

--- a/app/views/layouts/layout.haml
+++ b/app/views/layouts/layout.haml
@@ -6,7 +6,7 @@
 		%meta(name="description" content="Hacker database for SC2.")
 		%meta(name="keywords" content="starcraft heart of the swarm hacker database imbaqq")
 		//=script('jquery.min.js')
-		/=script('bootstrap.min.js')
+		=script('bootstrap.min.js')
 		=css('style.css')
 		=css('bootstrap.min.css')
 		:javascript
