--- a/app/views/layouts/layout.haml
+++ b/app/views/layouts/layout.haml
@@ -5,7 +5,7 @@
 		%meta(http-equiv="Content-Type" content="text/html; charset=iso-8859-1")
 		%meta(name="description" content="Hacker database for SC2.")
 		%meta(name="keywords" content="starcraft heart of the swarm hacker database imbaqq")
-		//=script('jquery.min.js')
+		=script('jquery.min.js')
 		=script('bootstrap.min.js')
 		=css('style.css')
 		=css('bootstrap.min.css')
