--- a/app/views/pages/list.haml
+++ b/app/views/pages/list.haml
@@ -1,4 +1,4 @@
-.col-xs-5.nudge-down
+.col-xs-12.col-sm-8.col-md-5.nudge-down
 	%p.help-block
 		Simple app to catch hackers in Starcraft II
 	%p.help-block
