Changed reports to games

--- a/app/views/pages/list.haml
+++ b/app/views/pages/list.haml
@@ -16,7 +16,7 @@
 				%td Server
 				%td Name
 				%td Race
-				%td Reports
+				%td Games
 				%td Last Game
 				%td Last Game Uploaded
 		%tbody
