--- a/app/views/pages/game.haml
+++ b/app/views/pages/game.haml
@@ -5,21 +5,29 @@
 		.alert.alert-danger
 			Incorrect winner selected. Voting has been locked.
 .col-xs-4
-	.form-group
-		%label Name
-		%input.form-control(value="#{@player.name} (#{@player.id})" readonly)
-	.form-group
-		%label Server
-		%input.form-control(value="#{@player.server}" readonly)
-	.form-group
-		%label Map
-		%input.form-control(value="#{@game.map}" readonly)
-	.form-group
-		%label Time
-		%input.form-control(value="#{@game.time}" readonly)
-	.form-group
-		%label Replay
-		%a.btn.btn-default.form-control(href="/game/download/#{@game.id}") Download
+	%blockquote
+		.form-group
+			%label
+				Name:
+				%a(href="http://#{@player.server}.battle.net/sc2/en/profile/#{@player.id}/1/#{@player.name}/")
+					=@player.name
+					%span.glyphicon.glyphicon-share
+
+		.form-group
+			%label ID:
+			#{@player.id}
+		.form-group
+			%label Server:
+			#{@player.server}
+		.form-group
+			%label Map:
+			#{@game.map}
+		.form-group
+			%label Time:
+			#{@game.time}
+		.form-group
+			%label Replay
+			%a.btn.btn-default.form-control(href="/game/download/#{@game.id}") Download
 	.form-group
 		%label Evidence
 		%pre(style="word-wrap:normal; white-space:pre-line;word-break:normal")
