--- a/app/views/pages/game_list.haml
+++ b/app/views/pages/game_list.haml
@@ -3,13 +3,18 @@
 		%thead
 			%tr
 				%td Player
+				%td ID
 				%td Map
 				%td Played
 				%td Uploaded
 		%tbody
 			-@games.each do |g|
 				%tr
-					%td #{g.player.name} (#{g.player.id})
+					%td
+						%a(href="http://#{g.player.server}.battle.net/sc2/en/profile/#{g.player.id}/1/#{g.player.name}/")
+							#{g.player.name}
+							%span.glyphicon.glyphicon-share
+					%td #{g.player.id}
 					%td
 						%a(href="/game/#{g.id}") #{g.map}
 					%td #{g.time[0..10]}
