--- a/app/views/pages/list.haml
+++ b/app/views/pages/list.haml
@@ -15,6 +15,7 @@
 			%tr
 				%td Server
 				%td Name
+				%td ID
 				%td Race
 				%td Games
 				%td Last Game
@@ -27,7 +28,11 @@
 						%img(src="/img/#{get_server_abbr[p.server.to_sym]}.png")
 						#{p.server}
 					%td
-						%a(href="/search/#{p.id}/games" title="View all games for this player") #{p.name} (#{p.id})
+						%a(href="/search/#{p.id}/games" title="View all games for this player") #{p.name}
+					%td
+						%a(href="http://#{p.server}.battle.net/sc2/en/profile/#{p.id}/1/#{p.name}/")
+							#{p.id}
+							%span.glyphicon.glyphicon-share
 					%td
 						%img(src="#{get_race_image(p.race)}")
 						#{p.race}
