--- a/app/views/partials/navbar.haml
+++ b/app/views/partials/navbar.haml
@@ -13,20 +13,30 @@
 				-if at_most_recent? then
 					%li.active
 						%a(href="/list/recent")
+							%span.glyphicon.glyphicon-home
 							Home
 							%span.sr-only (current)
 				-else
 					%li
-						%a(href="/list/recent") Home
+						%a(href="/list/recent")
+							%span.glyphicon.glyphicon-home
+							Home
 				-if at_submit? then
 					%li.active
 						%a(href="/submit")
-							Submit
+							%span.glyphicon.glyphicon-cloud-upload
+							Upload
 							%span.sr-only (current)
 				-else
 					%li
-						%a(href="/submit") Submit
+						%a(href="/submit")
+							%span.glyphicon.glyphicon-cloud-upload
+							Upload
 			%form.navbar-form.navbar-right(role="search" method="post" action="/search")
 				.form-group
+				.input-group
 					%input.form-control(type="text" placeholder="Search Players" name="player_search")
-				%button.btn.btn-default(type="submit") Submit
+					%span.input-group-btn
+						%button.btn.btn-default(type="submit")
+							%span.glyphicon.glyphicon-search
+
