--- a/app/views/pages/mmr.haml
+++ b/app/views/pages/mmr.haml
@@ -1,9 +1,5 @@
 .col-xs-12.nudge-down
 	%h4 MMR-Stats plugin for SC2Gears
-	%p.help-block
-		The MMR-Stats plugin is not affiliated with SC2Overwatch.
-		It is an excellent tool, however.
-
 .col-xs-12
 	%p
 		%b
@@ -21,5 +17,5 @@
 .col-xs-1
 	%b License:
 	%a(rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/de/")
-		%img(alt="Creative Commons Lizenzvertrag" src="http://i.creativecommons.org/l/by-nc-sa/3.0/de/88x31.png")
+		%img(alt="Creative Commons Lizenzvertrag" src="/mmr/88x31.png")
 
