added paper theme

--- a/app/views/pages/list.haml
+++ b/app/views/pages/list.haml
@@ -10,7 +10,7 @@
 	%p.help-block
 		Message InfCereal on TeamLiquid.net if you have any problems/suggestions.
 .col-xs-12.nudge-down
-	%table.table.table-striped.table-hover.table-bordered
+	%table.table.table-hover
 		%thead
 			%tr
 				%td Server
