--- a/app/views/layouts/layout.haml
+++ b/app/views/layouts/layout.haml
@@ -8,7 +8,7 @@
 		=script('jquery.min.js')
 		=script('bootstrap.min.js')
 		=css('style.css')
-		=css('bootstrap.min.css')
+		=css('bootstrap.paper.min.css')
 		:javascript
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -17,15 +17,16 @@
 
 			ga('create', 'UA-60014640-1', 'auto');
 			ga('send', 'pageview');
-	%body(style="background: #13473a")
+	%body
 		#body-container
 			#wrap
 				.container-fluid.border-shadow
 					#header
 						=render_partial :navbar
 					#body
-						.row
-							=yield
+						.container
+							.row
+								=yield
 			#footer-container.nudge-down
 				.container.text-center#footer
 					.row
