--- a/app/views/partials/navbar.haml
+++ b/app/views/partials/navbar.haml
@@ -35,5 +35,4 @@
 			%form.navbar-form.navbar-right(role="search" method="post" action="/search")
 				.form-group
 				.input-group
-					%input.form-control(type="text" placeholder="Search Players" name="player_search")
-
+					%input.form-control(type="text" placeholder="#{params[:name] ? params[:name] : 'Search Players'}" name="player_search")
