--- a/private/sass/style.scss
+++ b/private/sass/style.scss
@@ -40,7 +40,7 @@ body {
    padding-top: 15px;
 }
 #footer {
-   width: 100%;
+   #width: 100%;
    height: $footer-height;
    #background-color: $background-color;
 }
