footer added. also news

--- a/app/views/layouts/layout.haml
+++ b/app/views/layouts/layout.haml
@@ -26,9 +26,29 @@
 					#body
 						.row
 							=yield
-			#footer-container.nudge-down
-				.container#footer
+			#footer-container.nudge-down.container
+				%footer
+
 					.row
-						.col-xs-6
-							Copy write Joshua LeBlanc 2015
+						.col-lg-12
+							%ul.list-unstyled
+								%li.pull-right
+									%a(href="#top") Back to top
+								%li
+									%a(href="http://www.twitter.com/SC2Cereal") Twitter
+								%li
+									%a(href="https://github.com/HorizonShadow") Github
+								%li
+									%a(href="http://www.teamliquid.net/forum/starcraft-2/340614-gm-master-map-hacker-and-general-hacking-and-cheating-thread") TeamLiquid Thread
+								%li
+									%a(href="http://us.battle.net/sc2/en/profile/2809973/1/Cereal/") Battle.net
+								%li
+									%a(href="http://www.teamliquid.net/mytlnet/index.php?view=new&to=InfCereal") Contact me
+							%p
+								Made by Joshua LeBlanc, who lost to too many hackers one day.
+							%p
+								%a(href="http://bootswatch.com/paper/") Paper by Bootswatch
+
+
+
 
