--- a/private/sass/style.scss
+++ b/private/sass/style.scss
@@ -80,3 +80,17 @@ body {
 #nav-bar {
    #background-color: $background-color
 }
+
+footer li {
+  float: left;
+  margin-right: 1.5em;
+  margin-bottom: 1.5em;
+}
+
+footer p {
+  clear: left;
+  margin-bottom: 0;
+}
+footer {
+  margin: 5em 0;
+}
