--- a/app/views/partials/navbar.haml
+++ b/app/views/partials/navbar.haml
@@ -1,38 +1,39 @@
+=render_partial :upload_modal
 %nav.navbar.navbar-default.navbar-fixed-top
-	.container-fluid
-		.navbar-header
-			%button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#collapsed-items")
-				%span.sr-only Toggle navigation
-				%span.icon-bar
-				%span.icon-bar
-				%span.icon-bar
-			%a.navbar-brand(href="/list/recent") Starcraft II Overwatch
+  .container-fluid
+    .navbar-header
+      %button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#collapsed-items")
+        %span.sr-only Toggle navigation
+        %span.icon-bar
+        %span.icon-bar
+        %span.icon-bar
+      %a.navbar-brand(href="/list/recent") Starcraft II Overwatch
 
-		#collapsed-items.collapse.navbar-collapse
-			%ul.nav.navbar-nav
-				-if at_most_recent? then
-					%li.active
-						%a(href="/list/recent")
-							%span.glyphicon.glyphicon-home
-							Home
-							%span.sr-only (current)
-				-else
-					%li
-						%a(href="/list/recent")
-							%span.glyphicon.glyphicon-home
-							Home
-				-if at_submit? then
-					%li.active
-						%a(href="/submit")
-							%span.glyphicon.glyphicon-cloud-upload
-							Upload
-							%span.sr-only (current)
-				-else
-					%li
-						%a(href="/submit")
-							%span.glyphicon.glyphicon-cloud-upload
-							Upload
-			%form.navbar-form.navbar-right(role="search" method="post" action="/search")
-				.form-group
-				.input-group
-					%input.form-control(type="text" placeholder="#{params[:name] ? params[:name] : 'Search Players'}" name="player_search")
+    #collapsed-items.collapse.navbar-collapse
+      %ul.nav.navbar-nav
+        -if at_most_recent? then
+          %li.active
+            %a(href="/list/recent")
+              %span.glyphicon.glyphicon-home
+              Home
+              %span.sr-only (current)
+        -else
+          %li
+            %a(href="/list/recent")
+              %span.glyphicon.glyphicon-home
+              Home
+        -if at_submit? then
+          %li.active
+            %a#upload-button(data-toggle="modal" data-target="#upload-modal")
+              %span.glyphicon.glyphicon-cloud-upload
+              Upload
+              %span.sr-only (current)
+        -else
+          %li
+            %a#upload-button(data-toggle="modal" data-target="#upload-modal")
+              %span.glyphicon.glyphicon-cloud-upload
+              Upload
+      %form.navbar-form.navbar-right(role="search" method="post" action="/search")
+        .form-group
+        .input-group
+          %input.form-control(type="text" placeholder="#{params[:name] ? params[:name] : 'Search Players'}" name="player_search")
