--- a/private/sass/style.scss
+++ b/private/sass/style.scss
@@ -10,6 +10,9 @@ body {
   }
    /* The html and body elements cannot have any padding or margin. */
 }
+#upload-button {
+  cursor: pointer;
+}
 /* Wrapper for page content to push down footer */
 #wrap {
    #box-shadow: 0px 0px 10px black;
