removed success/error marks in upload modal

--- a/private/sass/style.scss
+++ b/private/sass/style.scss
@@ -42,6 +42,11 @@ body {
 .nudge-down {
    padding-top: 15px;
 }
+
+.dz-success-mark, .dz-error-mark {
+  display: none;
+}
+
 #footer {
    #width: 100%;
    height: $footer-height;
