moved versioning outside of site

--- a/app/views/pages/list.haml
+++ b/app/views/pages/list.haml
@@ -1,7 +1,7 @@
 .col-xs-12.nudge-down
   -if request.url.include? 'invalid_version'
     .alert.alert-danger
-      Invalid replay version uploaded - contact me using the links at the bottom of the page.
+      Invalid replay version uploaded - Contact me using the links at the bottom of the page.
   .panel.panel-default
     .panel-heading
       .panel-title
