Updated to use sc2replaystats

--- a/app/views/layouts/layout.haml
+++ b/app/views/layouts/layout.haml
@@ -7,8 +7,7 @@
     %meta(name="keywords" content="starcraft heart of the swarm hacker database imbaqq")
     =script('jquery.min.js')
     =script('bootstrap.min.js')
-    =script('dropzone.js')
-    =script('dropzone-config.js')
+    =script('upload_file.js')
     =css('style.css')
     =css('bootstrap.paper.min.css')
     :javascript
@@ -39,7 +38,7 @@
                 %li
                   %a(href="http://www.twitter.com/SC2Cereal") Twitter
                 %li
-                  %a(href="https://github.com/HorizonShadow") Github
+                  %a(href="https://github.com/HorizonShadow/SCII-Overwatch") Github
                 %li
                   %a(href="http://www.teamliquid.net/forum/starcraft-2/340614-gm-master-map-hacker-and-general-hacking-and-cheating-thread") TeamLiquid Thread
                 %li
@@ -50,7 +49,5 @@
                 Made by Cereal.
               %p
                 %a(href="http://bootswatch.com/paper/") Paper by Bootswatch
-                |
-                %a(href="http://www.dropzonejs.com/") Dropzone.js
                 |
                 %a(href="http://www.getbootstrap.com/") Bootstrap
