--- a/app/views/pages/list.haml
+++ b/app/views/pages/list.haml
@@ -10,36 +10,34 @@
       %p
         Patch 3.12 Support. New upload flow, new replay parser, new database structure, name change tracking.
 .col-xs-12.nudge-down
+  %h5 Recently reported players
   %table.table.table-hover
     %thead
       %tr
         %td Server
-        %td Name
-        %td ID
         %td Race
-        %td Games
-        %td Last Game
-        %td Last Game Uploaded
+        %td Name
+        %td Battle.net ID
+        %td Game
+        %td Date
         %td Innocent Votes
         %td Guilty Votes
     %tbody
-      -@players.each do |p|
-        %tr{ class: p.css_class }
+      -GamePlayer.all_accused.each do |gp|
+        %tr{ class: gp.css_class }
           %td
-            %img(src="/img/#{get_server_abbr[p.server.to_sym]}.png")
-            =p.server
+            %img(src="/img/#{gp.player.server}.png")
+            =gp.player.server
           %td
-            %a(href="/players/#{p.id}/games" title="View all games for this player") #{p.name}
+            %img(src="#{get_race_image(gp.race)}")
           %td
-            %a{ href: p.bnet_url }
-              =p.id
+            %a(href="/players/#{gp.player.id}/games" title="View all games for this player") #{gp.player.names.last.value}
+          %td
+            %a{ href: gp.player.bnet_url }
+              =gp.player.bnet_id
               %span.glyphicon.glyphicon-share
           %td
-            %img(src="#{get_race_image(p.race)}")
-            =p.race
-          %td=p.num_accused
-          %td
-            %a(href="/players/#{p.id}/game/#{p.last_game.id}" title="View this game") #{p.last_game.map}
-          %td=p.last_game.uploaded_at.to_date
-          %td=p.innocent_count
-          %td=p.guilty_count
+            %a(href="/players/#{gp.player.id}/game/#{gp.game.id}" title="View this game") #{gp.game.map}
+          %td=gp.game.date.strftime('%Y-%m-%d')
+          %td=gp.innocent_count
+          %td=gp.guilty_count
