--- a/app/views/pages/list.haml
+++ b/app/views/pages/list.haml
@@ -8,7 +8,7 @@
         ༼ つ ◕_◕༽つ NEWS ༼ つ ◕_◕༽つ
     .panel-body
       %p
-        Patch 3.12 Support. New upload flow, new replay parser, new database structure, name change tracking.
+        Sc2Overwatch is now powered by Sc2ReplayStats!
 .col-xs-12.nudge-down
   %h5 Recently reported players
   %table.table.table-hover
